# quantum_newgenbot-beta

./: .env.example  .gitignore  BUG_FIX_STATUS.md  COMMISSION_OPTIMIZATION_REPORT.md  COMPREHENSIVE_OPTIMIZATION_REPORT.md  DUBAIMATRIX_ARCHITECTURE_ANALYSIS.md  ForexQuantumBot_EA.mq5  ForexQuantumBot_EA_V2.mq5  GHOST_AUDIT_OPTIMIZATION_REPORT.md  HOW_TO_TEST.md  PHASE4_REPORT.md  PHD_AUDIT_REPORT.md  PROGRESS_REPORT.md  README.md  SYSTEM_DEEP_DIVE_ANALYSIS.md  analyze_commissions.py  analyze_realistic_trades.py  debug_strategy.py  main.py  requirements.txt  run_backtest.py  run_backtest_advanced.py  run_backtest_complete_v2.py  run_backtest_fast.py  run_backtest_final.backup  run_backtest_final.py  run_backtest_neural_audit.py  run_backtest_quick.py  run_backtest_simple.py  run_complete_neural_quantum.py  run_complete_system_test.py  run_dashboard.py  run_demo.py  run_live_mt5_analysis.py  run_live_trading.py  run_live_trading_v2.py  run_neural_audit_demo.py  run_new_complete_backtest.py  run_optimization.py  run_quantum_live_v3.py  (+11 more)
cpp-quantum-systems/: CMakeLists.txt  build.bat
cpp-quantum-systems/include/core/: core_utils.hpp
cpp-quantum-systems/include/monte_carlo/: advanced_simulator.hpp  density_estimator.hpp  path_generator.hpp  risk_analyzer.hpp  stubs.hpp
cpp-quantum-systems/include/quantum/: dimension_manager.hpp
cpp-quantum-systems/python_integration/: quantum_trading.py
cpp-quantum-systems/src/core/: core_utils.cpp
cpp-quantum-systems/src/monte_carlo/: advanced_simulator.cpp  density_estimator.cpp  (+2 more)
cpp-quantum-systems/tests/: test_main.cpp
(+129717 files in other folders)
